[package]
name = "maud-live-view"
# When releasing a new version, please update html_root_url in src/lib.rs
version = "0.24.1"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/maud-live-view/"
repository = "https://github.com/lunatic-solutions/maud_live_view"
description = "Compile-time HTML templates."
categories = ["template-engine"]
edition = "2021"

[features]
default = []

# Web framework integrations
actix-web = ["actix-web-dep", "futures-util"]
axum = ["axum-core", "http"]

[dependencies]
maud-live-view-macros = { version = "0.24.0", path = "../maud_live_view_macros" }
itoa = "1"
rocket = { version = ">= 0.3, < 0.5", optional = true }
futures-util = { version = "0.3.0", optional = true, default-features = false }
actix-web-dep = { package = "actix-web", version = "4", optional = true, default-features = false }
tide = { version = "0.16.0", optional = true, default-features = false }
axum-core = { version = "0.2", optional = true }
http = { version = "0.2", optional = true }

[dev-dependencies]
trybuild = { version = "1.0.33", features = ["diff"] }

[package.metadata.docs.rs]
all-features = true
