[package]
name = "maud-live-view-macros"
# When releasing a new version, please update html_root_url in src/lib.rs
version = "0.24.1"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/maud-live-view-macros/"
repository = "https://github.com/lunatic-solutions/maud_live_view"
description = "Compile-time HTML templates."
edition = "2021"

[dependencies]
syn = "1.0.8"
quote = "1.0.7"
proc-macro2 = "1.0.23"
proc-macro-error = "1.0.0"

[lib]
name = "maud_live_view_macros"
proc-macro = true
